--- a/run_application.yaml
+++ b/run_application.yaml
@@ -4,7 +4,7 @@
   ]
 
 - macro: unauthorized_processes
-  condition: proc.name in unauthorized_applications
+  condition: proc.name in (unauthorized_applications)
 
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
