--- a/run_application.yaml
+++ b/run_application.yaml
@@ -8,7 +8,7 @@
 
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
-  condition: unauthorized_processes
+  condition: container.id != host and unauthorized_processes
   output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container=%container.info image=%container.image.repository)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
