--- a/run_application.yaml
+++ b/run_application.yaml
@@ -4,11 +4,11 @@
   ]
 
 - macro: unauthorized_processes
-  condition: proc.name in (unauthorized_applications) and evt.type.is.open
+  condition: proc.name in (unauthorized_applications)
 
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
-  condition: unauthorized_processes 
+  condition: unauthorized_processes and (evt.type = execve)
   output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container=%container.info image=%container.image.repository)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
