--- a/run_application.yaml
+++ b/run_application.yaml
@@ -9,6 +9,6 @@
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
   condition: unauthorized_processes and (evt.type = execve)
-  output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container=%container.info image=%container.image.repository)
+  output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
