--- a/run_application.yaml
+++ b/run_application.yaml
@@ -37,7 +37,7 @@
 
 - rule: is running
   desc: Detect that an unauthorized application is running
-  condition: unauthorized_processes and (evt.type.is.open = true)
+  condition: unauthorized_processes and (evt.type.is.open = 1)
   output: is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
