--- a/run_application.yaml
+++ b/run_application.yaml
@@ -4,40 +4,12 @@
   ]
 
 - macro: unauthorized_processes
-  condition: proc.name in (unauthorized_applications)
-
-- macro: unautho  
-  condition: proc.pname in (unauthorized_applications)
-
-- macro: cmd
   condition: proc.cmdline in (unauthorized_applications)
+
 
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
   condition: unauthorized_processes and (evt.type = execve)
-  output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
-  priority: CRITICAL
-  tags: [proxy, okteto_cloud, crytoconcurrency, mining]
-
-- rule: Unauthorized application 
-  desc: Detect that an unauthorized application is running
-  condition: unautho and (evt.type = execve)
-  output: unauthorized (command=%proc.cmdline port=%fd.rport ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
-  priority: CRITICAL
-  tags: [proxy, okteto_cloud, crytoconcurrency, mining]
-
-
-- rule:  application 
-  desc: Detect that an unauthorized application is running
-  condition: cmd and (evt.type = execve)
-  output: unauthorized (command=%proc.cmdline ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
-  priority: CRITICAL
-  tags: [proxy, okteto_cloud, crytoconcurrency, mining]
-
-
-- rule: is running
-  desc: Detect that an unauthorized application is running
-  condition: unauthorized_processes and (evt.type.is.open = 0)
-  output: is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
+  output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container=%container.info image=%container.image.repository k8s.ns.name)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
