--- a/run_application.yaml
+++ b/run_application.yaml
@@ -3,8 +3,8 @@
     '"v2ray"'
   ]
 
-- macro: unauthorized_processes_name
-  condition: proc.name  in (unauthorized_applications)
+- macro: unauthorized_processes_pname
+  condition: proc.pname  in (unauthorized_applications)
 
 - macro: unauthorized_processes_cmdline
   condition: proc.cmdline in (unauthorized_applications)
@@ -17,7 +17,7 @@
 
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
-  condition: (unauthorized_processes_name or unauthorized_processes_cmdline) and (evt.type = execve)
+  condition: (unauthorized_processes_pname or unauthorized_processes_cmdline) and (evt.type = execve)
   output: An unauthorized application is running (command=%proc.cmdline port=%fd.rport ip=%fd.rip container2=%container.id container=%container.info image=%container.image.repository)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
