--- a/run_application.yaml
+++ b/run_application.yaml
@@ -17,8 +17,8 @@
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
 
-# - macro: unauthorized_processes_exe
-#   condition: proc.exe in (unauthorized_applications)
+- macro: unauthorized_processes_exe
+  condition: proc.exe in (unauthorized_applications)
 
 # - rule: Unauthorized application is running
 #   desc: Detect that an unauthorized application is running
