--- a/run_application.yaml
+++ b/run_application.yaml
@@ -3,9 +3,6 @@
     '"v2ray"'
   ]
 
-- macro: container
-  condition: container.id != host
-
 - macro: unauthorized_processes_name
   condition: proc.name in (unauthorized_applications)
 
@@ -15,7 +12,7 @@
 
 - rule: Unauthorized application is running
   desc: Detect that an unauthorized application is running
-  condition: container.id != host and (unauthorized_processes_name or unauthorized_processes_pname) and (evt.type = execve)
-  output: An unauthorized application is running (command=%proc.cmdline  container2=%container.name container=%container.info image=%container.image.repository)
+  condition: evt.type = execve and container.id != host and (unauthorized_processes_name or unauthorized_processes_pname) 
+  output: An unauthorized application is running (command=%proc.cmdline container=%container.info image=%container.image.repository)
   priority: CRITICAL
   tags: [proxy, okteto_cloud, crytoconcurrency, mining]
