--- a/run_application.yaml
+++ b/run_application.yaml
@@ -20,7 +20,7 @@
 
 - rule: Unauthorized connection to node or metadata API
   desc: Detect an unauthorized connection to a node port or metadata API
-  condition: evt.type in (sendto, sendmsg) and (uconnections) and k8s.ns.name != (kube-system)
+  condition: evt.type in (sendto, sendmsg) and (uconnections) and not (user_known_metadata_access)
   output: An unauthorized application is running (command=%proc.cmdline container=%container.info image=%container.image.repository)
   priority:  CRITICAL
   tags: [network, conections, nodepool, metadata]
@@ -30,3 +30,6 @@
   '"10.154.0.0/16"',
   '"169.254.169.254/32"'
   ]
+
+- macro: user_known_metadata_access
+  condition: (k8s.ns.name = "kube-system")
